# reveries-network

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  JustFile  README.md  build-docker.sh  docker-compose-5-nodes.yaml  docker-compose-6-nodes.yaml  docker-compose-llm-proxy-test.yml  docker-compose-llm-proxy.yml  docker-compose.yaml  env.example  llm-proxy-compose.yml  llm-services-compose.yml
agents/mcp/: README.md
agents/mcp/weather-server-python/: Dockerfile  pyproject.toml  weather.py
agents/mcp/weather-server-typescript/: Dockerfile
agents/python/execute_with_memories/: Dockerfile  README.md  main.py  mcp_client.py  models.py  requirements.txt  services.py  tool_executor.py  weather_mcp.py
agents/python/execute_with_memories/routes/: anthropic.py  deepseek.py  health.py
app-monitor/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app-monitor/src/: README.md  types.ts
app-monitor/src/components/: ConnectionDisplay.tsx  HeartbeatMonitor.tsx  PeerCard.tsx  PortManager.tsx
cait/: Cargo.toml
cait/src/: main.rs  smol_chan.rs
cmd/: Cargo.toml
cmd/src/: commands.rs  main.rs
docs/: architecture.md
llm-proxy/: Cargo.toml  Dockerfile  README.md  generate_ca.sh
llm-proxy/ca/: hudsucker.key
llm-proxy/caddy/: Caddyfile
llm-proxy/certs/: hudsucker.cer  hudsucker.key
llm-proxy/shared_identity/: proxy_public.pem
llm-proxy/src/: internal_api.rs  lib.rs  main.rs  parser.rs  request_context_db.rs  signers_certs.rs  tee_body.rs  tee_body_sse.rs  types.rs  usage.rs  utils.rs
llm-proxy/src/api_key_delegation_server/: mod.rs
llm-proxy/src/config/: env_vars.rs  mod.rs  signers_certs.rs
llm-proxy/src/parser/: anthropic.rs  deepseek.rs  mod.rs  sse_parser.rs
near-node/: Dockerfile-neard  build-neard.sh  docker-compose-neard.yml  entrypoint.sh
node/p2p-network/: Cargo.toml
node/p2p-network/src/: behaviour.rs  commands.rs  create_network.rs  env_var.rs  lib.rs  usage_db.rs
node/p2p-network/src/behaviour/: mod.rs
node/p2p-network/src/behaviour/heartbeat_behaviour/: config.rs  heartbeat_handler.rs  mod.rs  tee_quote_parser.rs
node/p2p-network/src/event_loop/: chat.rs  chat_handlers.rs  command_handlers.rs  event_handlers.rs  gossipsub_handlers.rs  mod.rs  request_response_handlers.rs  swarm_handlers.rs
node/p2p-network/src/event_loop/heartbeat/: heartbeat_handler.rs  mod.rs
node/p2p-network/src/event_loop/heartbeat_behaviour/: config.rs  heartbeat_handler.rs  mod.rs
node/p2p-network/src/event_loop/peer_manager/: heartbeat_data.rs  mod.rs
node/p2p-network/src/network_events/: chat.rs  command_handlers.rs  gossipsub_handlers.rs  kademlia_handlers.rs  mod.rs  query_node_state.rs  reincarnation.rs  request_response_handlers.rs  swarm_handlers.rs
node/p2p-network/src/network_events/peer_manager/: heartbeat_data.rs  mod.rs  peer_info.rs
node/p2p-network/src/node_client/: commands.rs  container_manager.rs  file_handlers.rs  llm_proxy_client.rs  memories.rs  mod.rs  network_events_listener.rs  proxy_api_client.rs  reincarnation.rs  stdin_handlers.rs  usage_verification.rs
node/p2p-network/src/types/: chat.rs  gossip_topic.rs  kademlia_keys.rs  mod.rs  near_types.rs  network_event.rs  network_loop_event.rs  node_status.rs  proxy_reencryption.rs  reverie.rs  reverie_name.rs  signatures.rs
node/p2p-network/src/utils/: mod.rs  pubkeys.rs
node/rpc/: Cargo.toml
node/rpc/src/: commands.rs  lib.rs  main.rs  rpc_client.rs  rpc_server.rs
node/runtime/: Cargo.toml
node/runtime/src/: evm.rs  evm_runtime.rs  lib.rs  llm.rs  main.rs  near_runtime.rs  reencrypt.rs  tee_attestation.rs  tee_mock_attestation.rs  test_commands.rs  vrf.rs
node/runtime/src/llm/: agent_secrets_json.rs  mcp_tool_usage.rs  metrics.rs  mod.rs
node/telemetry/: Cargo.toml
node/telemetry/src/: lib.rs  logging.rs  main.rs  metrics.rs
telemetry/: grafana.ini  prometheus.yml
telemetry/dashboard/: package.json  pnpm-lock.yaml
telemetry/dashboard/public/: index.html
telemetry/dashboard/src/: index.css  index.tsx  types.ts
telemetry/dashboard/src/components/: ConnectionDisplay.tsx  HeartbeatMonitor.tsx  PeerCard.tsx
telemetry/dashboard/src/utils/: formatting.ts  websocket.ts
telemetry/dashboards/: dashboard.json  dashboard.yml
telemetry/datasources/: prometheus.yml
telemetry/heartbeat-monitor/: package.json  pnpm-lock.yaml
telemetry/heartbeat-monitor/src/: README.md  index.tsx  types.ts
telemetry/heartbeat-monitor/src/components/: ConnectionDisplay.tsx  Footnote.tsx  HeartbeatMonitor.tsx  PeerCard.tsx  PortManager.tsx
telemetry/heartbeat-monitor/src/utils/: formatting.ts  websocket.ts
terraform/: main.tf  terraform.tfstate  terraform.tfvars.example  watch_nodes.sh
tests/: Cargo.toml  README.md  memory_test.rs  mod.rs  network_test.rs  network_utils.rs  test_utils.rs
tests-e2e/: Cargo.toml  README.md  mod.rs  network_utils.rs  test_utils.rs  utils_docker.rs  utils_network.rs
tests-e2e/api_key_delegation_test/: mod.rs  paid_near_test.rs  unpaid_test.rs
tests-e2e/memory_test/: mod.rs
tests-e2e/network_respawn_test/: mod.rs
tests-e2e/proxy_api_test/: mod.rs
tests-e2e/respawn_test/: mod.rs
tests/memory_test/: mod.rs
tests/network_test/: mod.rs
