[workspace]
resolver = "2"

members = [
    "cmd",
    "node/p2p-network",
    "node/rpc",
    "node/runtime",
    "node/telemetry",
    "tests"
]

[workspace.dependencies]
anyhow = "1.0.94"
base64-url = "3.0.0"
bincode = "1.3.3"
clap = { version = "4.5.6", features = ["derive"] }
color-eyre = "0.6.3"
colored = { version = "3.0.0" }
dotenv = "0.15.0"
futures = "0.3.30"
hex = "0.4.3"
jsonrpsee = { version = "0.24.7", features = ["full"] }
libp2p = { version = "0.55.0", features = [
    "tokio",
    "cbor",
    "dns",
    "kad",
    "mdns",
    "secp256k1",
    "noise",
    "macros",
    "request-response",
    "tcp",
    "gossipsub",
    "macros",
    "quic",
    "websocket",
    "serde",
    "yamux"
] }
libp2p-kad = { version = "0.47.0" }
libp2p-identify = { version = "0.46.0" }
rand = { version = "0.8.5" }
regex = { version = "1.11.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
tracing = "0.1.41"
tracing-subscriber = "0.3"
tokio = { version = "1.38", features = ["test-util"] }
umbral-pre = { version = "0.11.0", features = ["serde", "default-serialization"] }
