[workspace]
resolver = "2"

members = [
    "cmd",
    "node/p2p-network",
    "node/rpc",
    "node/runtime",
    "node/telemetry",
    "tests-e2e",
    "llm-proxy"
]


[workspace.dependencies]
anyhow = "1.0.94"
base64-url = "3.0.0"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.6", features = ["derive"] }
color-eyre = "0.6.3"
colored = { version = "3.0.0" }
dotenv = "0.15.0"
# DEPRECATED, imports conflicting rustls versions
ethers = { version = "2.0.14" }
futures = "0.3.30"
hex = "0.4.3"
jsonrpsee = { version = "0.24.7", features = ["full"] }
lazy_static = "1.5.0"
libp2p = { version = "0.55.0", features = [
    "tokio",
    "cbor",
    "dns",
    "kad",
    "mdns",
    "secp256k1",
    "noise",
    "macros",
    "request-response",
    "tcp",
    "gossipsub",
    "quic",
    "websocket",
    "serde",
    "yamux"
] }
libp2p-kad = { version = "0.47.0" }
libp2p-identify = { version = "0.46.0" }
libp2p-identity = { version = "0.2.10" }
once_cell = { version = "1.21" }
nanoid = { version = "0.4.0" }
rand = { version = "0.8.5" }
regex = { version = "1.11.1" }
scopeguard = "1.2.0"
serial_test = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1" }
sha3 = { version = "0.10.8" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.38", features = ["full"] }
umbral-pre = { version = "0.11.0", features = ["serde", "default-serialization"] }

# llm-proxy signatures
ecdsa = { version = "0.16", features = ["pem", "signing", "verifying"] }
elliptic-curve = { version = "0.13", features = ["pkcs8"] }
p256 = { version = "0.13", features = ["ecdsa"] }
sha256 = "1.5"
rand_core = { version = "0.6", features = ["std"] } # For key generation
signature = { version = "2", features = ["std"] }
sha2 = "0.10"
# Add for reading/verifying node signature
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["pem"] }

reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23.26", default-features = false, features = ["std"] }
rustls-pemfile = "2.2"
tokio-rustls = "0.26.2"