[package]
name = "cait"
version = "0.1.0"
edition = "2021"

[dependencies]
ecdsa = { version = "0.16.8", features = ["digest", "hazmat"] }
elliptic-curve = { version = "0.13.5", features = ["serde"] }
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde"] }
serde = { version = "1.0.175", features = ["derive"] }
smol = "1.3.0"
digest = "0.10.7"
cait-sith = { git = "https://github.com/cronokirby/cait-sith", features = ["k256"] }
easy-parallel = "3.2.0"
structopt = "0.3.26"
rand_core = { version = "0.6.4", features = ["getrandom"] }

auto_ops = "0.3.0"
ck-meow = "0.1.0"
event-listener = "2.5.3"
magikitten = "0.2.0"
rmp-serde = "1.1.2"
subtle = "2.5.0"
criterion = "0.4"


