[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[dependencies]

p2p-network = { path = "../node/p2p-network" }
rpc = { path = "../node/rpc" }

clap = { workspace = true }
jsonrpsee = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["full"] }
futures = "0.3.30"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }