[package]
name = "cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
p2p-network = { path = "../node/p2p-network" }
rpc = { path = "../node/rpc" }
runtime = { path = "../node/runtime" }
telemetry = { path = "../node/telemetry" }

itertools = { version = "0.8.2" }

color-eyre = { workspace = true }
colored = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }