[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherited
anyhow = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
nanoid = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Signatures
base64 = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
signature = { workspace = true }

# Unique to llm-proxy
async-trait = "0.1"
bytes = "1.5"
flate2 = "1.0"
http = "0.2"
http-body = "1.0"
http-body-util = { version = "0.1.3", features = ["full"] }
hudsucker = { version = "0.23", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.9"
pin-project-lite = "0.2"
rcgen = "0.13"
rustls = "0.20"
rustls-pemfile = "1.0"
thiserror = "1.0"
tokio-rustls = "0.23"
url = "2.4"
webpki-roots = "0.22"
# SQLite
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"