[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2024"

# TDX feature flag
[features]
tdx_enabled = ["dep:tdx"]

[dependencies]
runtime = { path = "../node/runtime" }
tdx = { git = "https://github.com/automata-network/tdx-attestation-sdk", optional = true }
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }

# Inherited
anyhow = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
nanoid = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Signatures
base64 = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
p256 = { workspace = true }
rand_core = { workspace = true }
signature = { workspace = true }
rand = { workspace = true }

# Unique to llm-proxy
bytes = "1.5"
flate2 = "1.0"
http = "0.2"
http-body = "1.0"
http-body-util = { version = "0.1.3", features = ["full"] }
hudsucker = { git = "https://github.com/peitalin/hudsucker", rev="9301dc0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
pin-project-lite = "0.2"
rcgen = "0.13"
url = "2.4"

# Add for Internal HTTP API_KEY Server
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
# Add for reading/verifying node signature
once_cell = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]