[package]
name = "network-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
p2p-network = { path = "../node/p2p-network" }
runtime = { path = "../node/runtime" }
rpc = { path = "../node/rpc" }
telemetry = { path = "../node/telemetry" }

# Workspace dependencies
color-eyre = { workspace = true }
jsonrpsee = { workspace = true }
libp2p = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serial_test = "3.2.0"

[[test]]
name = "network_test"
path = "network_test.rs"
