[package]
name = "network-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local crates
p2p-network = { path = "../node/p2p-network" }
runtime = { path = "../node/runtime" }
rpc = { path = "../node/rpc" }
telemetry = { path = "../node/telemetry" }

# Workspace dependencies
color-eyre = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }
sha3 = { workspace = true }
jsonrpsee = { workspace = true }
libp2p = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
scopeguard = { workspace = true }

[[test]]
name = "network_test"
path = "network_test/mod.rs"

[[test]]
name = "memory_test"
path = "memory_test/mod.rs"
