[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"

[dependencies]

runtime = { path = "../runtime" }

bincode = { version = "1.3.3" }
nanoid = { version = "0.4.0" }
lazy_static = { version = "1.5.0" }

color-eyre = { workspace = true }
colored = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
libp2p-kad = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
umbral-pre = { workspace = true }