[package]
name = "p2p-network"
version = "0.1.0"
edition = "2024"

[dependencies]

runtime = { path = "../runtime" }
telemetry = { path = "../telemetry" }
llm-proxy = { path = "../../llm-proxy" }

async-channel = { version = "2.3.1" }

# SQLite DB for Usage Reports
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# Inherited
bincode = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
libp2p = { workspace = true }
libp2p-kad = { workspace = true }
libp2p-identify = { workspace = true }
nanoid = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
umbral-pre = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
signature = { workspace = true }
base64 = { workspace = true }
elliptic-curve = { workspace = true }
rand_core = { workspace = true }

