[package]
name = "p2p-network"
version = "0.1.0"
edition = "2024"

# TDX feature flag
[features]
tdx_enabled = ["dep:tdx"]

[dependencies]
runtime = { path = "../runtime" }
telemetry = { path = "../telemetry" }
llm-proxy = { path = "../../llm-proxy" }
tdx = { git = "https://github.com/automata-network/tdx-attestation-sdk", optional = true }
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }

# SQLite DB for Usage Reports
async-channel = { version = "2.3.1" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# Inherited
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
bincode = { workspace = true }
color-eyre = { workspace = true }
colored = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true, features = ["serde"] } # Needed for timestamp
dotenv = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
libp2p = { workspace = true }
libp2p-kad = { workspace = true }
libp2p-identify = { workspace = true }
libp2p-identity = { workspace = true }
nanoid = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["test-util", "full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
umbral-pre = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
signature = { workspace = true }
base64 = { workspace = true }
elliptic-curve = { workspace = true }
rand_core = { workspace = true }
# Add for reading/verifying node signature
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
# TLS dependencies
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }

