[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]

p2p-network = { path = "../p2p-network" }
telemetry = { path = "../telemetry" }
runtime = { path = "../runtime" }
tokio-stream = { version = "0.1.17" }
async-stream = { version = "0.3.6" }

color-eyre = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
