[package]
name = "rpc"
version = "0.1.0"
edition = "2024"

[dependencies]

p2p-network = { path = "../p2p-network" }
telemetry = { path = "../telemetry" }
runtime = { path = "../runtime" }
llm-proxy = { path = "../../llm-proxy" }
tokio-stream = { version = "0.1.17" }
async-stream = { version = "0.3.6" }

color-eyre = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
