[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# TDX feature flag
[features]
tdx_enabled = ["dep:tdx"]

[dependencies]
tdx = { git = "https://github.com/automata-network/tdx-attestation-sdk", optional = true }
rig-core = { git = "https://github.com/0xPlaygrounds/rig" }
dcap-rs = { git = "https://github.com/automata-network/dcap-rs.git" }
revm = { version = "19.3.0" }
alloy = { version = "0.3", features = ["full"] }
hex-literal = "0.4.1"

dotenv = { workspace = true }
color-eyre = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
umbral-pre = { workspace = true }

