[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]

prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"

dotenv = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }