[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]

prometheus = "0.13"
prometheus_exporter = "0.8.5"
tracing-appender = "0.2.3"

# Inherited from workspace
lazy_static = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
colored = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } # Features defined in workspace
tokio = { workspace = true } # Features defined in workspace